# pi-web

./: .gitignore  PLAN.md  build.bat  build.ps1  css-theme.md  package-lock.json  package.json  progress.md  run.bat
.pi/agents/: qa-spec-gen.agent.md  qa-tester.agent.md
.pi/chains/: qa-review-loop.chain.md
client/: index.html  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
client/src/: App.tsx  index.css  main.tsx
client/src/__tests__/lib/: blocks.test.ts  markdown.test.ts  tokens.test.ts
client/src/__tests__/stores/: panelStore.test.ts
client/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  Skeletons.tsx  ToastContainer.tsx  Tooltip.tsx
client/src/components/chat/: ChatView.tsx  MessageBubble.tsx  SubAgentCard.tsx
client/src/components/layout/: TabBar.tsx  (+3 more)
client/src/hooks/: useKeyboard.ts  useScaledSize.ts
client/src/lib/: api.ts  clampMenu.ts  markdown.ts  sanitize.ts  tauri.ts  thinking.ts  time.ts  tools.ts  ws.ts
client/src/stores/: layoutStore.ts  messageUtils.ts  modelStore.ts  panelEvents.ts  panelStore.ts  profileStore.ts  searchStore.ts  settingsStore.ts  themeStore.ts  toastStore.ts  workflowStore.ts  workspaceStore.ts
public/: index.html
server/: package.json  tsconfig.json  tsconfig.tsbuildinfo
server/src/: config.ts  index.ts  store.ts
server/src/routes/: browse.ts  data.ts  extensions.ts  info.ts  models.ts  subagent.ts  workspace.ts
server/src/services/: sessionStore.ts
server/src/ws/: handler.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: lib.rs  main.rs
(+22 files in other folders)
